--- a/public/css/student/nav.css
+++ b/public/css/student/nav.css
@@ -135,22 +135,29 @@ nav .items i:hover {
   display: none;
   position: absolute;
   background-color: #fff;
-  min-width: 120px;
+  min-width: 180px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1; /* Ensure the dropdown is on top of other elements */
+  border-radius: 8px;
 }
 
 .nav-list .dropdown:hover .dropdown-content {
   display: block;
+  border-radius: 8px;
 }
 
 .nav-list .dropdown-content a {
-  color: rgb(0, 0, 0);
-  padding: 8px;
+  color: #333;
+  padding: 12px 16px;
   text-decoration: none;
   display: block;
+  transition: background-color 0.3s ease;
+  border-radius: 8px;
 }
+
 .nav-list .dropdown-content a:hover {
-  background-color: #e4e3e3;
+  background-color: #f2f2f2;
+  border-radius: 8px;
 }
 
 .nav-list .search {
@@ -212,4 +219,3 @@ nav .items i:hover {
 .nav-list .search.active .btn {
   transform: translateX(198px);
 }
-
