--- a/views/student/courses.ejs
+++ b/views/student/courses.ejs
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
     <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" />
     <!-- toastify -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!-- style sheets -->
     <link rel="stylesheet" href="/css/general.css" />
@@ -31,54 +23,61 @@
 
     <link rel="stylesheet" href="/css/chatGPT.css" />
     <title>All courses</title>
-  </head>
+</head>
 
-  <body data-userid="<%= user._id %>">
+<body data-userid="<%= user._id %>">
     <div class="progress" id="PreLoaderBar">
-      <div class="indeterminate"></div>
+        <div class="indeterminate"></div>
     </div>
-    <%- include("./partials/nav.ejs") %>
+    <header>    
+        <%- include("./partials/nav.ejs") %>
+    </header>
     <main>
-      <% if (allCourses.length> 0) { %>
-      <section class="courses">
-        <% allCourses.forEach(c=> { %>
+        <% if (allCourses.length> 0) { %>
+            <section class="courses">
+                <% allCourses.forEach(c=> { %>
 
-        <a id="anchor" href="/student/<%= user._id %>/courses/<%= c._id %>">
-          <article class="card">
-            <div class="image">
-              <img src="<%= c.coverPic %>" alt="cover picture" />
-            </div>
-            <div class="article-body">
-              <h2><%= c.title %></h2>
-            </div>
-          </article>
-        </a>
+                    <a id="anchor" href="/student/<%= user._id %>/courses/<%= c._id %>">
+                        <article class="card">
+                            <div class="image">
+                                <img src="<%= c.coverPic %>" alt="cover picture" />
+                            </div>
+                            <div class="article-body">
+                                <h2>
+                                    <%= c.title %>
+                                </h2>
+                            </div>
+                        </article>
+                    </a>
 
-        <% }); %>
-      </section>
-      <% } else { %>
-      <div>
-        <p>no courses to show</p>
-      </div>
-      <% } %>
-      <div class="pagination">
-        <ul>
-          <% const number=Math.ceil(coursesLength / coursesPerPage) || 0 %>
-          <%for(let i=0; i < number; i++) { %>
-          <li><a value="<%=i+1 %>" href="?p=<%=i %>"> <%=i+1 %> </a></li>
-          <% } %>
-        </ul>
-      </div>
+                    <% }); %>
+            </section>
+            <% } else { %>
+                <div>
+                    <p>no courses to show</p>
+                </div>
+                <% } %>
+                    <div class="pagination">
+                        <ul>
+                            <% const number=Math.ceil(coursesLength / coursesPerPage) || 0 %>
+                                <%for(let i=0; i < number; i++) { %>
+                                    <li><a value="<%=i+1 %>" href="?p=<%=i %>">
+                                            <%=i+1 %>
+                                        </a></li>
+                                    <% } %>
+                        </ul>
+                    </div>
     </main>
     <%- include("./partials/footer.ejs") %>
-    <!-- processing bar -->
-    <script>
-      document.onreadystatechange = function () {
-        if (document.readyState === "complete") {
-          console.log(document.readyState);
-          document.getElementById("PreLoaderBar").style.display = "none";
-        }
-      };
-    </script>
-  </body>
+        <!-- processing bar -->
+        <script>
+            document.onreadystatechange = function () {
+                if (document.readyState === "complete") {
+                    console.log(document.readyState);
+                    document.getElementById("PreLoaderBar").style.display = "none";
+                }
+            };
+        </script>
+</body>
+
 </html>
