--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
 
-    <script
-      src="https://kit.fontawesome.com/0b0cd0c012.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="/css/student/home.css" />
-    <link rel="stylesheet" href="/css/student/nav.css" />
-    <link rel="stylesheet" href="/css/student/footer.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 
-    <title>Student Page</title>
-  </head>
+  <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/student/home.css" />
+  <link rel="stylesheet" href="/css/student/nav.css" />
+  <link rel="stylesheet" href="/css/student/footer.css" />
 
-  <body>
-    <%- include("./partials/nav.ejs") %>
+  <title>Student Page</title>
+</head>
+
+<body>
+  <%- include("./partials/nav.ejs") %>
     <main>
       <!-- Main Body Section -->
       <div class="main_body">
@@ -35,7 +26,9 @@
             <div class="left-card">
               <h1>Latest updates</h1>
               <div class="update-details">
-                <h2><%= courseTitles.instructorId %> added new Material</h2>
+                <h2>
+                  <%= courseTitles.instructorId %> Dr. Essam added new Material
+                </h2>
                 <p class="update-type">New Content: Useful links</p>
                 <p class="update-description">
                   Description: Dear students, I've uploaded new useful material
@@ -71,7 +64,7 @@
             <div class="card">
               <div class="details">
                 <h3>Request from: Dalia</h3>
-                <p>Project: algo</p>
+                <p>Project: algorithms & Analysis</p>
               </div>
               <div class="buttons">
                 <button class="accept-btn">Accept</button>
@@ -81,7 +74,7 @@
             <div class="card">
               <div class="details">
                 <h3>Request from: Farid</h3>
-                <p>Project: Web</p>
+                <p>Project: Web Development</p>
               </div>
               <div class="buttons">
                 <button class="accept-btn">Accept</button>
@@ -102,26 +95,27 @@
     </main>
 
     <!-- footer  -->
-   <%- include("./partials/footer.ejs") %>
+    <%- include("./partials/footer.ejs") %>
 
-    <!-- Jokes API -->
-    <script>
-      const generateButton = document.getElementById("generate");
-      const jokesContainer = document.querySelector("#cnjokes");
+      <!-- Jokes API -->
+      <script>
+        const generateButton = document.getElementById("generate");
+        const jokesContainer = document.querySelector("#cnjokes");
 
-      function fetchJoke() {
-        fetch("https://api.chucknorris.io/jokes/random")
-          .then((response) => response.json())
-          .then((joke) => {
-            const jokeElement = `<p class="joke">${joke.value}</p>`;
-            jokesContainer.innerHTML = jokeElement;
-          })
-          .catch((error) => {
-            console.error("Error fetching joke:", error);
-          });
-      }
+        function fetchJoke() {
+          fetch("https://api.chucknorris.io/jokes/random")
+            .then((response) => response.json())
+            .then((joke) => {
+              const jokeElement = `<p class="joke">${joke.value}</p>`;
+              jokesContainer.innerHTML = jokeElement;
+            })
+            .catch((error) => {
+              console.error("Error fetching joke:", error);
+            });
+        }
 
-      generateButton.addEventListener("click", fetchJoke);
-    </script>
-  </body>
+        generateButton.addEventListener("click", fetchJoke);
+      </script>
+</body>
+
 </html>
