done with the student

--- a/views/student/partials/nav.ejs
+++ b/views/student/partials/nav.ejs
@@ -38,7 +38,7 @@
         />
         <div class="list" id="profileMenu">
           <ul>
-            <li><a href="/student/settings">Manage your account</a></li>
+            <li><a href="/student/<%=user._id %>/settings">Manage your account</a></li>
             <li><a href="/logout">Log out</a></li>
           </ul>
         </div>
