--- a/views/student/allCourses-inner.ejs
+++ b/views/student/allCourses-inner.ejs
@@ -1,156 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><% title %></title>
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="/css/student/allCourses-inner.css" />
+    <link rel="stylesheet" href="/css/student/nav.css" />
+    <link rel="stylesheet" href="/css/student/footer.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>
-    <% title %>
-  </title>
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="/css/student/innercourse.css" />
-  <link rel="stylesheet" href="/css/student/nav.css" />
-  <link rel="stylesheet" href="/css/student/footer.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+    <script
+      src="https://kit.fontawesome.com/0b0cd0c012.js"
+      crossorigin="anonymous"
+    ></script>
 
-  <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
+    <style></style>
+  </head>
 
-  <style></style>
-</head>
-
-<body>
-  <header>
-    <!-- Navigation -->
-    <nav id="nav">
-      <img src="/img/logos/DSK-JF-drak-transparent-logo.png" alt="logo" />
-      <div class="navigation">
-        <div class="nav-list">
-          <ul>
-            <li><a href="/student/<%= user._id %>">Home</a></li>
-            <li><a href="/student/<%= user._id %>/courses">Courses</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropbtn">My Courses <i class="fas fa-caret-down"></i></a>
-              <div class="dropdown-content">
-                <% if (courses.length> 0) { %> <% courses.forEach((course)=> { %>
-                    <a href="/student/<%= user._id %>/courseInner/<%= course._id %>">
-                      <%= course.title %>
-                    </a>
-                    <% }); %>
-                      <% } %>
+  <body>
+    <header>
+      <!-- Navigation -->
+      <%- include("./partials/nav.ejs") %>
+    </header>
+    <main>
+      <section id="course-inner">
+        <!-- main section -->
+        <div class="overview">
+          <img class="course-img" src="<%= course.coverPic %>" alt="" />
+          <div class="course-head">
+            <div class="c-name">
+              <h2><%= course.title %></h2>
+              <div class="star">
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
               </div>
-            </li>
-          </ul>
-          <div class="search">
-            <input type="text" class="input" placeholder="Search..." />
-            <button class="btn"><i class="fas fa-search"></i></button>
-          </div>
-        </div>
-        <div class="items">
-          <i class="fas fa-bell"></i>
-          <!-- Replace with your notifications icon -->
-        </div>
-        <div class="profile">
-          <img src="/img/default/defaultPP.png" alt="user image" onclick="showMenu()" id="profilePic" />
-          <div class="list" id="profileMenu">
-            <ul>
-              <li><a href="/student/settings">Manage your account</a></li>
-              <li><a href="/logout">Log out</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <main>
-    <section id="course-inner">
-      <!-- main section -->
-      <div class="overview">
-        <img class="course-img" src="<%= course.coverPic %>" alt="" />
-        <div class="course-head">
-          <div class="c-name">
-            <h2>
-              <%= course.title %>
-            </h2>
-            <div class="star">
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
+              <p class="description"><%= course.description %></p>
+              <p>Number of students enrolled:<%=course.numberOfStudents %></p>
             </div>
-            <p>
-              <%= course.description %>
-            </p>
+            <section class="instructor-section">
+                <h3>Instructor: <%= instructor.firstName %> <%= instructor.lastName %></h3>
+                <div class="tutor">
+                  <!-- professor img  -->
+                  <img src="<%= instructor.profilePic %>" alt="" />
+                </div>
+              </section>
           </div>
         </div>
-      </div>
-      <!-- Instructor section -->
-      <section class="instructor-section">
-        <h3>
-          <%= instructor.firstName %>
-            <%= instructor.lastName %>
-        </h3>
-        <div class="tutor">
-          <!-- professor img  -->
-          <img src="<%= instructor.profilePic %>" alt="" />
-        </div>
+        <!-- Instructor section -->
+        
       </section>
-    </section>
-  </main>
-  <footer>
-    <div class="copywrite">
-      <p>Copyright @2023 All rights reserved</p>
-      <div class="pro-links">
-        <i class="fab fa-facebook-f facebook"></i>
-        <i class="fab fa-instagram instagram"></i>
-        <i class="fab fa-linkedin-in linkedin"></i>
-      </div>
-    </div>
-  </footer>
-  <script>
-    let menu = document.getElementById("profileMenu");
+    </main>
 
-    function showMenu() {
-      menu.classList.toggle("active-list");
-    }
-    document.addEventListener("click", function (e) {
-      if (
-        menu.classList.contains("active-list") &&
-        !menu.contains(e.target) &&
-        !document.getElementById("profilePic").contains(e.target)
-      ) {
-        menu.classList.remove("active-list");
+    <%- include("./partials/footer.ejs") %>
+
+    <script>
+      let menu = document.getElementById("profileMenu");
+
+      function showMenu() {
+        menu.classList.toggle("active-list");
       }
-    });
+      document.addEventListener("click", function (e) {
+        if (
+          menu.classList.contains("active-list") &&
+          !menu.contains(e.target) &&
+          !document.getElementById("profilePic").contains(e.target)
+        ) {
+          menu.classList.remove("active-list");
+        }
+      });
 
-    // Nav on scroll
-    window.onscroll = function () {
-      var navbar = document.getElementById("nav");
-      if (window.pageYOffset > 5) {
-        navbar.classList.add("scroll");
-      } else {
-        navbar.classList.remove("scroll");
-      }
-    };
+      // Nav on scroll
+      window.onscroll = function () {
+        var navbar = document.getElementById("nav");
+        if (window.pageYOffset > 5) {
+          navbar.classList.add("scroll");
+        } else {
+          navbar.classList.remove("scroll");
+        }
+      };
 
-    // Search
-    const search = document.querySelector(".search");
-    const btn = document.querySelector(".btn");
-    const input = document.querySelector(".input");
+      // Search
+      const search = document.querySelector(".search");
+      const btn = document.querySelector(".btn");
+      const input = document.querySelector(".input");
 
-    btn.addEventListener("click", () => {
-      search.classList.toggle("active");
-      input.focus();
-    });
-  </script>
-</body>
-
+      btn.addEventListener("click", () => {
+        search.classList.toggle("active");
+        input.focus();
+      });
+    </script>
+  </body>
 </html>
