--- a/views/student/partials/footer.ejs
+++ b/views/student/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div class="copywrite">
-      <p>Copyright @2023 All rights reserved</p>
+      <p>Copyright &copy; 2023 All rights reserved</p>
       <div class="pro-links">
         <i class="fab fa-facebook-f facebook"></i>
         <i class="fab fa-instagram instagram" ></i>
