--- a/views/admin/notifications.ejs
+++ b/views/admin/notifications.ejs
@@ -43,6 +43,10 @@
           <li><a class="nav-link" href="/admin/<%= user._id %>/settings">Profile</a></li>
           <li><a class="nav-link" href="/admin/<%= user._id %>/security">Security</a></li>
           <li><a class="nav-link active" href="#">Notifications</a></li>
+          <li>
+            <a class="nav-link" href="/admin/<%= user._id %>"
+              >Home</a >
+          </li>
         </nav>
 
         <hr class="mt-0 mb-4" />
