--- a/views/admin/security.ejs
+++ b/views/admin/security.ejs
@@ -51,6 +51,10 @@
               >Notifications</a
             >
           </li>
+          <li>
+            <a class="nav-link" href="/admin/<%= user._id %>"
+              >Home</a >
+          </li>
         </nav>
 
         <hr class="mt-0 mb-4" />
