--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -50,6 +50,10 @@
             <a class="nav-link" href="/admin/<%= user._id %>/notifications"
               >Notifications</a
             >
+            <li>
+              <a class="nav-link" href="/admin/<%= user._id %>"
+                >Home</a >
+            </li>
           </li>
         </nav>
         <hr class="mt-0 mb-4" />
