--- a/views/instructor/notifications.ejs
+++ b/views/instructor/notifications.ejs
@@ -40,6 +40,10 @@
           <li><a class="nav-link" href="/instructor/<%= user._id %>/settings">Profile</a></li>
           <li><a class="nav-link" href="/instructor/<%= user._id %>/security">Security</a></li>
           <li><a class="nav-link active" href="#">Notifications</a></li>
+          <li>
+            <a class="nav-link" href="/instructor/<%= user._id %>"
+              >Home</a >
+          </li>
         </nav>
 
         <hr class="mt-0 mb-4" />
