--- a/views/instructor/settings.ejs
+++ b/views/instructor/settings.ejs
@@ -47,6 +47,10 @@
               >Notifications</a
             >
           </li>
+          <li>
+            <a class="nav-link" href="/instructor/<%= user._id %>"
+              >Home</a >
+          </li>
         </nav>
         <hr class="mt-0 mb-4" />
         <div class="row">
