--- a/views/student/partials/nav.ejs
+++ b/views/student/partials/nav.ejs
@@ -31,7 +31,7 @@
       </div>
       <div class="profile">
         <img
-          src="/img/default/defaultPP.png"
+          src="<%= user.profilePic %>"
           alt="user image"
           onclick="showMenu()"
           id="profilePic"
