--- a/views/student/settings.ejs
+++ b/views/student/settings.ejs
@@ -46,6 +46,10 @@
               >Notifications</a
             >
           </li>
+          <li>
+            <a class="nav-link" href="/student/<%= user._id %>"
+              >Home</a >
+          </li>
         </nav>
         <hr class="mt-0 mb-4" />
         <div class="row">
