--- a/public/css/student/home.css
+++ b/public/css/student/home.css
@@ -29,14 +29,14 @@ body::-webkit-scrollbar {
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  max-width: 70%;
+  max-width: 50%;
   border-radius: 8px;
 }
 
 h1 {
   font-size: 24px;
   margin-bottom: 20px;
-  color: #101c32;
+  color: #efbf3c;
 }
 
 .update-details {
@@ -80,7 +80,7 @@ h1 {
 }
 
 .btn2 {
-  background-color: #28a745;
+  background-color: #efbf3c;
 }
 
 /* Jokes API section */
@@ -125,7 +125,7 @@ h1 {
 .sidebar {
   position: absolute;
   right: 6%;
-  flex: 0 0 300px;
+  /* flex: 0 0 300px;  */
   background-color: #f9f9f9;
   padding: 20px;
   border-radius: 10px;
@@ -200,3 +200,64 @@ h2 {
   cursor: pointer;
 }
 
+/* Trivia API */
+.TriviaGame {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.game-card {
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+  max-width: 400px;
+}
+
+.game-card .header {
+  background-color: #8a63d2;
+  border-radius: 8px 8px 0 0;
+  padding: 10px;
+}
+
+.game-card .header h2 {
+  color: #ffffff;
+  font-size: 24px;
+  margin: 0;
+}
+
+.game-card p {
+  margin-bottom: 10px;
+}
+
+.game-card button {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 4px;
+  background-color: #e0e0e0;
+  color: #333333;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.game-card button:hover {
+  background-color: #cccccc;
+}
+
+.game-card #correct {
+  color: green;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.game-card #wrong {
+  color: red;
+  font-weight: bold;
+  margin-top: 10px;
+}
