added the hoempage and fixed the pagination in view all in instructor

--- a/views/instructor/addFile.ejs
+++ b/views/instructor/addFile.ejs
@@ -24,9 +24,9 @@
 </head>
 
 <body data-userid="<%= user._id %>" data-courseid="<%= course._id %>">
-  <%- include("./nav.ejs") %>
+  <%- include("./partials/nav.ejs") %>
     <main>
-      <%- include("./inner-course-header.ejs") %>
+      <%- include("./partials/inner-course-header.ejs") %>
         <section class="display">
           <div class="add-project">
             <div class="add-project-form" id="project">
