--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
 
-  <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/student/home.css" />
-  <link rel="stylesheet" href="/css/student/nav.css" />
-  <link rel="stylesheet" href="/css/student/footer.css" />
+    <script
+      src="https://kit.fontawesome.com/0b0cd0c012.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/css/student/home.css" />
+    <link rel="stylesheet" href="/css/student/nav.css" />
+    <link rel="stylesheet" href="/css/student/footer.css" />
 
-  <title>Student Page</title>
-</head>
+    <title>Student Page</title>
+  </head>
 
-<body>
-  <%- include("./partials/nav.ejs") %>
+  <body data-userId="<%= user._id%>">
+    <%- include("./partials/nav.ejs") %>
     <main>
       <!-- Main Body Section -->
       <div class="main_body">
@@ -92,30 +96,67 @@
           <button id="generate">Generate</button>
         </div>
       </section>
+      <section class="jokes">
+        <div class="jokes-card">
+          <p>Generate code form Aussie 10 % OFF</p>
+          <div id="code"></div>
+          <button id="generateCode">Generate</button>
+        </div>
+      </section>
     </main>
 
     <!-- footer  -->
     <%- include("./partials/footer.ejs") %>
 
-      <!-- Jokes API -->
-      <script>
-        const generateButton = document.getElementById("generate");
-        const jokesContainer = document.querySelector("#cnjokes");
+    <!-- Aussie  -->
+    <script type="module">
+      // import userModel from "../../models/user.js";
 
-        function fetchJoke() {
-          fetch("https://api.chucknorris.io/jokes/random")
-            .then((response) => response.json())
-            .then((joke) => {
-              const jokeElement = `<p class="joke">${joke.value}</p>`;
-              jokesContainer.innerHTML = jokeElement;
+      const generateCode = document
+        .getElementById("generateCode")
+        .addEventListener("click", async () => {
+          const userId = "<%= user._id%>";
+
+          try {
+            await fetch("https://aussiefood.store/api/dskjf/newuser", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                userId,
+              }),
             })
-            .catch((error) => {
-              console.error("Error fetching joke:", error);
-            });
-        }
+              .then((res) => {
+                return res.json();
+              })
+              .then((data) => {
+                console.log(data);
+              });
+          } catch (err) {   
+            console.log(err);
+          }
+        });
+    </script>
 
-        generateButton.addEventListener("click", fetchJoke);
-      </script>
-</body>
+    <!-- Jokes API -->
+    <script>
+      const generateButton = document.getElementById("generate");
+      const jokesContainer = document.querySelector("#cnjokes");
 
+      function fetchJoke() {
+        fetch("https://api.chucknorris.io/jokes/random")
+          .then((response) => response.json())
+          .then((joke) => {
+            const jokeElement = `<p class="joke">${joke.value}</p>`;
+            jokesContainer.innerHTML = jokeElement;
+          })
+          .catch((error) => {
+            console.error("Error fetching joke:", error);
+          });
+      }
+
+      generateButton.addEventListener("click", fetchJoke);
+    </script>
+  </body>
 </html>
