--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -21,23 +21,6 @@
     <main>
       <!-- Main Body Section -->
       <div class="main_body">
-        <section class="TriviaGame">
-          <div class="game-card">
-            <div class="header">
-              <h2>Trivia time!</h2>
-            </div>
-            <p id="category"></p>
-            <p id="difficulty"></p>
-            <p id="question"></p>
-            <button id="answer1"></button>
-            <button id="answer2"></button>
-            <button id="answer3"></button>
-            <button id="answer4"></button>
-            <p id="correct"></p>
-            <p id="wrong"></p>
-          </div>
-        </section>
-
         <div class="container">
           <div class="main_details">
             <div class="left-card">
@@ -72,6 +55,7 @@
             </div>
           </div>
         </div>
+
         <!-- Sidebar Requests Section -->
         <div class="sidebar">
           <div class="row">
@@ -102,15 +86,32 @@
           <a href="#">See all</a>
         </div>
       </div>
+      <div class="section-bottom">
+        <section class="TriviaGame">
+          <div class="game-card">
+            <div class="header">
+              <h2>Trivia time!</h2>
+            </div>
+            <p id="category"></p>
+            <p id="difficulty"></p>
+            <p id="question"></p>
+            <button id="answer1"></button>
+            <button id="answer2"></button>
+            <button id="answer3"></button>
+            <button id="answer4"></button>
+            <p id="correct"></p>
+            <p id="wrong"></p>
+          </div>
+        </section>
 
-
-      <section class="jokes">
-        <div class="jokes-card">
-          <p>Chuck Norris Jokes</p>
-          <div id="cnjokes"></div>
-          <button id="generate">Generate</button>
-        </div>
-      </section>
+        <section class="jokes">
+          <div class="jokes-card">
+            <p>Chuck Norris Jokes</p>
+            <div id="cnjokes"></div>
+            <button id="generate">Generate</button>
+          </div>
+        </section>
+      </div>
     </main>
 
     <!-- footer  -->
