--- a/public/css/student/home.css
+++ b/public/css/student/home.css
@@ -15,7 +15,8 @@ body::-webkit-scrollbar {
 /* Main Body */
 .main_body {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: flex-start;
   margin-top: 30px;
   padding-top: 20px;
 }
@@ -29,7 +30,7 @@ body::-webkit-scrollbar {
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  max-width: 50%;
+  max-width: 70%;
   border-radius: 8px;
 }
 
@@ -124,13 +125,14 @@ h1 {
 /* Sidebar Requests */
 .sidebar {
   position: absolute;
-  right: 6%;
-  /* flex: 0 0 300px;  */
+  right: 5%;
   background-color: #f9f9f9;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  z-index: -10;
+  margin-left: 20px;
+  flex: 0 0 300px;
+  z-index: -9999;
 }
 
 h2 {
@@ -202,10 +204,7 @@ h2 {
 
 /* Trivia API */
 .TriviaGame {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  flex: 0 0 300px;
 }
 
 .game-card {
@@ -260,4 +259,9 @@ h2 {
   color: red;
   font-weight: bold;
   margin-top: 10px;
+}
+.section-bottom {
+  display: flex;
+  justify-content: center;
+  gap: 5%;
 }
