--- a/views/instructor/viewAll.ejs
+++ b/views/instructor/viewAll.ejs
@@ -73,7 +73,16 @@
                     </td>
                     <td>
                       <a href="#">
-                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-github" id="github"></i>
+                      </a>
+                      <a href="#">
+                        <i class="fa-brands fa-linkedin" id="linkedin"></i>
+                      </a>
+                      <a href="#">
+                        <i class="fa-brands fa-twitter" id="twitter"></i>
+                      </a>
+                      <a href="#">
+                        <i class="fa-brands fa-facebook" id="facebook"></i>
                       </a>
                     </td>
                   </tr>
