--- a/public/css/general.css
+++ b/public/css/general.css
@@ -167,3 +167,15 @@ body::-webkit-scrollbar {
   position: relative;
   top: -100px;
 }
+#github {
+  color: #171515;
+}
+#linkedin {
+  color: #0077b5;
+}
+#twitter {
+  color: #4294ff;
+}
+#facebook {
+  color: #4267b2;
+}
