--- a/public/css/student/home.css
+++ b/public/css/student/home.css
@@ -93,7 +93,7 @@ h1 {
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
-  margin: 0 auto;
+  margin: 5px auto;
 }
 
 .jokes-card p {
