--- a/views/student/settings.ejs
+++ b/views/student/settings.ejs
@@ -1,306 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <!-- toastify -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <!-- style sheets  -->
-    <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/student/settings.css" />
-    <title>Student-Settings</title>
-  </head>
 
-  <body>
-    <main data-userid="<%=user._id%>">
-      <div class="container-xl px-4 mt-4">
-        <nav class="nav nav-borders">
-          <li><a class="nav-link active" href="#">Profile</a></li>
-          <li>
-            <a class="nav-link" href="/student/<%= user._id %>/security"
-              >Security</a
-            >
-          </li>
-          <li>
-            <a class="nav-link" href="/student/<%= user._id %>/notifications"
-              >Notifications</a
-            >
-          </li>
-          <li>
-            <a class="nav-link" href="/student/<%= user._id %>"
-              >Home</a >
-          </li>
-        </nav>
-        <hr class="mt-0 mb-4" />
-        <div class="row">
-          <div class="col-xl-4">
-            <div class="card mb-4 mb-xl-0">
-              <div class="card-header">Profile Picture</div>
-              <div class="card-body text-center">
-                <form id="form1" enctype="multipart/form-data">
-                  <label for="fileToUpload">
-                    <div
-                      class="profile-pic"
-                      style="background-image: url(<%=user.profilePic %>)"
-                    ></div>
-                  </label>
-                  <input
-                    type="file"
-                    name="file"
-                    id="fileToUpload"
-                    accept="image/png,image/gif,image/jpeg , image/jpg"
-                  />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <!-- toastify -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <!-- style sheets  -->
+  <link rel="stylesheet" href="/css/general.css" />
+  <link rel="stylesheet" href="/css/student/settings.css" />
+  <title>Student-Settings</title>
+</head>
 
-                  <div class="small font-italic text-muted mb-4">
-                    JPG or PNG no larger than 5 MB
-                  </div>
-                  <div class="button-container">
-                    <button class="btn btn-primary" id="upload-new-image">
-                      Upload new image
-                    </button>
-                  </div>
-                </form>
-              </div>
+<body>
+  <main data-userid="<%=user._id%>">
+    <div class="container-xl px-4 mt-4">
+      <nav class="nav nav-borders">
+        <li><a class="nav-link active" href="#">Profile</a></li>
+        <li>
+          <a class="nav-link" href="/student/<%= user._id %>/security">Security</a>
+        </li>
+        <li>
+          <a class="nav-link" href="/student/<%= user._id %>/notifications">Notifications</a>
+        </li>
+        <li>
+          <a class="nav-link" href="/student/<%= user._id %>">Home</a>
+        </li>
+      </nav>
+      <hr class="mt-0 mb-4" />
+      <div class="row">
+        <div class="col-xl-4">
+          <div class="card mb-4 mb-xl-0">
+            <div class="card-header">Profile Picture</div>
+            <div class="card-body text-center">
+              <form id="form1" enctype="multipart/form-data">
+                <label for="fileToUpload">
+                  <div class="profile-pic" style="background-image: url(<%=user.profilePic %>)"></div>
+                </label>
+                <input type="file" name="file" id="fileToUpload" accept="image/png,image/gif,image/jpeg , image/jpg" />
+
+                <div class="small font-italic text-muted mb-4">
+                  JPG or PNG no larger than 5 MB
+                </div>
+                <div class="button-container">
+                  <button class="btn btn-primary" id="upload-new-image">
+                    Upload new image
+                  </button>
+                </div>
+              </form>
             </div>
           </div>
-          <!-- ------------------------ -->
-          <div class="col-xl-8">
-            <div class="card mb-4">
-              <div class="card-header">Account Details</div>
-              <div class="card-body">
-                <form id="form2">
-                  <div class="row gx-3 mb-3">
-                    <div class="col-md-6">
-                      <label class="small mb-1" for="firstName"
-                        >First name</label
-                      >
-                      <input
-                        class="form-control"
-                        id="firstName"
-                        name="firstName"
-                        type="text"
-                        value="<%= user.firstName%>"
-                      />
-                    </div>
-
-                    <div class="col-md-6">
-                      <label class="small mb-1" for="lastName">Last name</label>
-                      <input
-                        class="form-control"
-                        id="lastName"
-                        name="lastName"
-                        type="text"
-                        value="<%= user.lastName%>"
-                      />
-                    </div>
-                    <div class="mb-3">
-                      <label class="small mb-1" for="email"
-                        >Email address</label
-                      >
-                      <input
-                        class="form-control"
-                        id="email"
-                        name="email"
-                        type="text"
-                        value="<%= user.email%>"
-                      />
-                    </div>
+        </div>
+        <!-- ------------------------ -->
+        <div class="col-xl-8">
+          <div class="card mb-4">
+            <div class="card-header">Account Details</div>
+            <div class="card-body">
+              <form id="form2">
+                <div class="row gx-3 mb-3">
+                  <div class="col-md-6">
+                    <label class="small mb-1" for="firstName">First name</label>
+                    <input class="form-control" id="firstName" name="firstName" type="text"
+                      value="<%= user.firstName%>" />
                   </div>
 
-                  <div class="row gx-3 mb-3">
-                    <div class="col-md-6">
-                      <label class="small mb-1" for="phoneNumber"
-                        >Phone number</label
-                      >
-                      <input
-                        class="form-control"
-                        id="phoneNumber"
-                        name="phoneNumber"
-                        type="tel"
-                        placeholder="Enter your phone number"
-                        value="<%= user.phoneNumber %>"
-                      />
-                    </div>
-                    <div class="col-md-6">
-                      <label class="small mb-1" for="birthdayDate"
-                        >Birthday</label
-                      >
-                      <input
-                        class="form-control"
-                        id="birthdayDate"
-                        name="birthdayDate"
-                        type="date"
-                        value="<%= user.birthdayDate %>"
-                      />
-                    </div>
+                  <div class="col-md-6">
+                    <label class="small mb-1" for="lastName">Last name</label>
+                    <input class="form-control" id="lastName" name="lastName" type="text" value="<%= user.lastName%>" />
                   </div>
-                  <div class="row gx-3 mb-3">
-                    <p>Social Accounts</p>
-                    <div class="col-md-6 social-media">
-                      <i class="fa-brands fa-facebook"></i>
-                      <input
-                        class="form-control"
-                        id="facebook"
-                        type="text"
-                        placeholder="Link to Facebook"
-                        value="<%= user.facebook %>"
-                      />
-                    </div>
-
-                    <div class="col-md-6 social-media">
-                      <i class="fa-brands fa-linkedin"></i>
-                      <input
-                        class="form-control"
-                        id="linkedin"
-                        type="text"
-                        placeholder="Link to LinkedIn"
-                        value="<%= user.linkedin %>"
-                      />
-                    </div>
-
-                    <div class="col-md-6 social-media">
-                      <i class="fa-brands fa-github"></i>
-                      <input
-                        class="form-control"
-                        id="github"
-                        type="text"
-                        placeholder="Link to Github"
-                        value="<%= user.github %>"
-                      />
-                    </div>
-
-                    <div class="col-md-6 social-media">
-                      <i class="fa-brands fa-twitter"></i>
-                      <input
-                        class="form-control"
-                        id="twitter"
-                        type="text"
-                        placeholder="Link to Twitter"
-                        value="<%= user.Twitter %>"
-                      />
-                    </div>
+                  <div class="mb-3">
+                    <label class="small mb-1" for="email">Email address</label>
+                    <input class="form-control" id="email" name="email" type="text" value="<%= user.email%>" />
                   </div>
-                  <div class="btns">
-                    <button class="btn btn-primary" id="saveBtn" type="submit">
-                      Save changes
-                    </button>
-                    <button class="btn clear_btn" type="button">Clear</button>
+                </div>
+
+                <div class="row gx-3 mb-3">
+                  <div class="col-md-6">
+                    <label class="small mb-1" for="phoneNumber">Phone number</label>
+                    <input class="form-control" id="phoneNumber" name="phoneNumber" type="tel"
+                      placeholder="Enter your phone number" value="<%= user.phoneNumber %>" />
                   </div>
-                </form>
-              </div>
+                  <div class="col-md-6">
+                    <label class="small mb-1" for="birthdayDate">Birthday</label>
+                    <input class="form-control" id="birthdayDate" name="birthdayDate" type="date"
+                      value="<%= user.birthdayDate %>" />
+                  </div>
+                </div>
+                <div class="row gx-3 mb-3">
+                  <p>Social Accounts</p>
+                  <div class="col-md-6 social-media">
+                    <i class="fa-brands fa-facebook" id="facebook"></i>
+                    <input class="form-control" type="text" placeholder="Link to Facebook"
+                      value="<%= user.facebook %>" />
+                  </div>
+
+                  <div class="col-md-6 social-media">
+                    <i class="fa-brands fa-linkedin" id="linkedin"></i>
+                    <input class="form-control" type="text" placeholder="Link to LinkedIn"
+                      value="<%= user.linkedin %>" />
+                  </div>
+
+                  <div class="col-md-6 social-media">
+                    <i class="fa-brands fa-github" id="github"></i>
+                    <input class="form-control" type="text" placeholder="Link to Github" value="<%= user.github %>" />
+                  </div>
+
+                  <div class="col-md-6 social-media">
+                    <i class="fa-brands fa-twitter" id="twitter"></i>
+                    <input class="form-control" type="text" placeholder="Link to Twitter" value="<%= user.Twitter %>" />
+                  </div>
+                </div>
+                <div class="btns">
+                  <button class="btn btn-primary" id="saveBtn" type="submit">
+                    Save changes
+                  </button>
+                  <button class="btn clear_btn" type="button">Clear</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <script>
-      document.getElementById("form1").addEventListener("submit", async (e) => {
-        e.preventDefault();
-        try {
-          const fileToUpload = document.getElementById("fileToUpload").files[0];
-          const formData = new FormData();
-          formData.append("file", fileToUpload);
+  <script>
+    document.getElementById("form1").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      try {
+        const fileToUpload = document.getElementById("fileToUpload").files[0];
+        const formData = new FormData();
+        formData.append("file", fileToUpload);
 
-          const res = await fetch(
-            "/student/settings/changepp/<%= user._id %>",
-            {
-              method: "POST",
-              body: formData,
-            }
-          );
+        const res = await fetch(
+          "/student/settings/changepp/<%= user._id %>",
+          {
+            method: "POST",
+            body: formData,
+          }
+        );
 
-          const data = await res.json();
-          if (data.msg) location.reload();
-          else if (data.err) location.assign("/error");
-        } catch (err) {
-          console.log(err);
-          location.assign("/error");
-        }
-      });
-    </script>
+        const data = await res.json();
+        if (data.msg) location.reload();
+        else if (data.err) location.assign("/error");
+      } catch (err) {
+        console.log(err);
+        location.assign("/error");
+      }
+    });
+  </script>
 
-    <script type="module">
-      import { validateForm } from "/js/formValidation.js";
-      const form2 = document.getElementById("form2");
+  <script type="module">
+    import { validateForm } from "/js/formValidation.js";
+    const form2 = document.getElementById("form2");
 
-      form2.addEventListener("submit", async (e) => {
-        e.preventDefault();
-        const errorMsg = validateForm(form2);
-        if (errorMsg) {
+    form2.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const errorMsg = validateForm(form2);
+      if (errorMsg) {
+        return Toastify({
+          text: errorMsg,
+          duration: 3000,
+          gravity: "top",
+          close: false,
+          backgroundColor: "red",
+        }).showToast();
+      }
+
+      try {
+        const res = await fetch(
+          "/student/<%= user._id %>/settings/updatedata",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              email: document.getElementById("email").value,
+              firstName: document.getElementById("firstName").value,
+              lastName: document.getElementById("lastName").value,
+              birthdayDate: document.getElementById("birthdayDate").value,
+              phoneNumber: document.getElementById("phoneNumber").value,
+            }),
+          }
+        );
+        const data = await res.json();
+        if (data.msg) {
           return Toastify({
-            text: errorMsg,
+            text: "updated successfully ",
+            duration: 3000,
+            gravity: "top",
+            close: false,
+            backgroundColor: "green",
+          }).showToast();
+          location.reload();
+        } else if (data.errMsg) {
+          return Toastify({
+            text: data.errMsg,
             duration: 3000,
             gravity: "top",
             close: false,
             backgroundColor: "red",
           }).showToast();
-        }
+        } else location.assign("/error");
+      } catch (err) {
+        console.log(err);
+        location.assign("/error");
+      }
+    });
+  </script>
 
-        try {
-          const res = await fetch(
-            "/student/<%= user._id %>/settings/updatedata",
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({
-                email: document.getElementById("email").value,
-                firstName: document.getElementById("firstName").value,
-                lastName: document.getElementById("lastName").value,
-                birthdayDate: document.getElementById("birthdayDate").value,
-                phoneNumber: document.getElementById("phoneNumber").value,
-              }),
-            }
-          );
-          const data = await res.json();
-          if (data.msg) {
-            return Toastify({
-              text: "updated successfully ",
-              duration: 3000,
-              gravity: "top",
-              close: false,
-              backgroundColor: "green",
-            }).showToast();
-            location.reload();
-          } else if (data.errMsg) {
-            return Toastify({
-              text: data.errMsg,
-              duration: 3000,
-              gravity: "top",
-              close: false,
-              backgroundColor: "red",
-            }).showToast();
-          } else location.assign("/error");
-        } catch (err) {
-          console.log(err);
-          location.assign("/error");
-        }
-      });
-    </script>
-
-    <!-- <script type="module">
+  <!-- <script type="module">
       import { validateForm } from "/js/formValidation.js";
 
       const form = document.getElementById("form");
@@ -350,5 +269,6 @@
         }
       });
     </script> -->
-  </body>
+</body>
+
 </html>
