--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="/css/admin/nav.css" />
   <link rel="stylesheet" href="/css/admin/users.css" />
   <link rel="stylesheet" href="/css/chatGPT.css" />
+  <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
   <title>Admin-Users</title>
 </head>
 
