--- a/views/student/settings.ejs
+++ b/views/student/settings.ejs
@@ -18,6 +18,7 @@
   <!-- style sheets  -->
   <link rel="stylesheet" href="/css/general.css" />
   <link rel="stylesheet" href="/css/student/settings.css" />
+  <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
   <title>Student-Settings</title>
 </head>
 
