--- a/views/student/allCourses-inner.ejs
+++ b/views/student/allCourses-inner.ejs
@@ -1,83 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><% title %></title>
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="/css/student/allCourses-inner.css" />
-    <link rel="stylesheet" href="/css/student/nav.css" />
-    <link rel="stylesheet" href="/css/student/footer.css" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+    <% title %>
+  </title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="/css/student/allCourses-inner.css" />
+  <link rel="stylesheet" href="/css/student/nav.css" />
+  <link rel="stylesheet" href="/css/student/footer.css" />
+  <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 
-    <script
-      src="https://kit.fontawesome.com/0b0cd0c012.js"
-      crossorigin="anonymous"
-    ></script>
+  <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
 
-    <style></style>
-  </head>
+  <style></style>
+</head>
 
-  <body>
-    <header>
-      <!-- Navigation -->
-      <%- include("./partials/nav.ejs") %>
-    </header>
-    <main>
-      <section id="course-inner">
-        <!-- main section -->
-        <div class="overview">
-          <img class="course-img" src="<%= course.coverPic %>" alt="" />
-          <div class="course-head">
-            <div class="c-name">
-              <h2><%= course.title %></h2>
-              <div class="star">
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-              <p class="description"><%= course.description %></p>
-              <p>Number of students enrolled:<%=course.numberOfStudents %></p>
+<body>
+  <header>
+    <!-- Navigation -->
+    <%- include("./partials/nav.ejs") %>
+  </header>
+  <main>
+    <section id="course-inner">
+      <!-- main section -->
+      <div class="overview">
+        <img class="course-img" src="<%= course.coverPic %>" alt="" />
+        <div class="course-head">
+          <div class="c-name">
+            <h2>
+              <%= course.title %>
+            </h2>
+            <div class="star">
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
             </div>
-            <section class="instructor-section">
-                <h3>Instructor: <%= instructor.firstName %> <%= instructor.lastName %></h3>
-                <div class="tutor">
-                  <!-- professor img  -->
-                  <img src="<%= instructor.profilePic %>" alt="" />
-                </div>
-              </section>
+            <p class="description">
+              <%= course.description %>
+            </p>
+            <p>Number of students enrolled:<%=course.numberOfStudents %>
+            </p>
           </div>
+          <section class="instructor-section">
+            <h3>Instructor: <%= instructor.firstName %>
+                <%= instructor.lastName %>
+            </h3>
+            <div class="tutor">
+              <!-- professor img  -->
+              <img src="<%= instructor.profilePic %>" alt="" />
+            </div>
+          </section>
         </div>
-        <!-- Instructor section -->
-        
-      </section>
-    </main>
+      </div>
+      <!-- Instructor section -->
 
-    <%- include("./partials/footer.ejs") %>
+    </section>
+  </main>
+
+  <%- include("./partials/footer.ejs") %>
 
     <script>
       let menu = document.getElementById("profileMenu");
@@ -115,5 +108,6 @@
         input.focus();
       });
     </script>
-  </body>
+</body>
+
 </html>
