--- a/views/student/gotBanned.ejs
+++ b/views/student/gotBanned.ejs
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/general.css" />
   <link rel="stylesheet" href="/css/student/nav.css" />
+  <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
   <title>Sorry..</title>
 </head>
 <nav id="nav">
@@ -53,25 +54,24 @@
       </h1>
       <br>
       <p>
-        We regret to inform you that your account has been banned. We sincerely
-        apologize for any inconvenience this may have caused. It is important
-        that you take immediate action by contacting your instructors or the
-        system administrator to address this matter.
+        We regret to inform you that your account has been banned. We sincerely apologize for any inconvenience this may
+        have caused. It is important that you take immediate action by contacting your instructors or the system
+        administrator to address this matter.
       </p>
       <br>
       <p>
-        Please reach out to your instructors or the admin to discuss the reasons
-        behind the ban and to explore any potential steps for resolution. They
-        will be able to provide you with further guidance and assistance in this
+        Please reach out to your instructors or the admin to discuss the reasons behind the ban and to explore any
+        potential steps for resolution. They will be able to provide you with further guidance and assistance in this
         regard.
       </p>
       <br>
       <p>
-        Once again, we deeply apologize for the inconvenience caused, and we
-        appreciate your understanding and cooperation in resolving this issue.
+        Once again, we deeply apologize for the inconvenience caused, and we appreciate your understanding and
+        cooperation in resolving this issue.
       </p>
     </div>
   </body>
+
 
 </html>
 <script>
