--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="/css/student/home.css" />
   <link rel="stylesheet" href="/css/student/nav.css" />
   <link rel="stylesheet" href="/css/student/footer.css" />
-
+  <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
   <title>Student Page</title>
 </head>
 
