--- a/views/student/notifications.ejs
+++ b/views/student/notifications.ejs
@@ -1,108 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/student/notifications.css" />
-    <title>Notifications</title>
-  </head>
 
-  <body>
-    <main>
-      <div class="container-xl px-4 mt-4">
-        <nav class="nav nav-borders">
-          <li>
-            <a class="nav-link" href="/student/<%= user._id %>/settings"
-              >Profile</a
-            >
-          </li>
-          <li>
-            <a class="nav-link" href="/student/<%= user._id %>/security"
-              >Security</a
-            >
-          </li>
-          <li><a class="nav-link active" href="#">Notifications</a></li>
-          <li>
-            <a class="nav-link" href="/student/<%= user._id %>">Home</a>
-          </li>
-        </nav>
-        <hr class="mt-0 mb-4" />
-        <div class="row">
-          <div class="col-xl-8">
-            <div class="card mb-4">
-              <h1 class="card-header">Notifications</h1>
-              <div class="card-body">
-                <form id="UpdateProfile_Form">
-                  <div class="mb-3">
-                    <div class="cb2">
-                      <h2>Get Notifications From other students</h2>
-                      <input type="checkbox" hidden="hidden" id="cb-n1" />
-                      <label class="switch" for="cb-n1"></label>
-                    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/css/student/notifications.css" />
+  <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
+  <title>Notifications</title>
+</head>
+
+<body>
+  <main>
+    <div class="container-xl px-4 mt-4">
+      <nav class="nav nav-borders">
+        <li>
+          <a class="nav-link" href="/student/<%= user._id %>/settings">Profile</a>
+        </li>
+        <li>
+          <a class="nav-link" href="/student/<%= user._id %>/security">Security</a>
+        </li>
+        <li><a class="nav-link active" href="#">Notifications</a></li>
+        <li>
+          <a class="nav-link" href="/student/<%= user._id %>">Home</a>
+        </li>
+      </nav>
+      <hr class="mt-0 mb-4" />
+      <div class="row">
+        <div class="col-xl-8">
+          <div class="card mb-4">
+            <h1 class="card-header">Notifications</h1>
+            <div class="card-body">
+              <form id="UpdateProfile_Form">
+                <div class="mb-3">
+                  <div class="cb2">
+                    <h2>Get Notifications From other students</h2>
+                    <input type="checkbox" hidden="hidden" id="cb-n1" />
+                    <label class="switch" for="cb-n1"></label>
+                  </div>
+                </div>
+                <hr />
+                <div class="mb-3">
+                  <div class="cb2">
+                    <h2>Get Notifications From Team Leader</h2>
+                    <input type="checkbox" hidden="hidden" id="cb-n3" />
+                    <label class="switch" for="cb-n3"></label>
+                  </div>
+                </div>
+                <hr />
+                <div class="mb-3">
+                  <div class="cb2">
+                    <h2>Get Notifications From All instructors</h2>
+                    <input type="checkbox" hidden="hidden" id="cb-n4" />
+                    <label class="switch" for="cb-n4"></label>
                   </div>
                   <hr />
-                  <div class="mb-3">
-                    <div class="cb2">
-                      <h2>Get Notifications From Team Leader</h2>
-                      <input type="checkbox" hidden="hidden" id="cb-n3" />
-                      <label class="switch" for="cb-n3"></label>
-                    </div>
+                </div>
+                <div class="mb-3">
+                  <div class="cb2">
+                    <h2>Get Notifications From All TA's</h2>
+                    <input type="checkbox" hidden="hidden" id="cb-n5" />
+                    <label class="switch" for="cb-n5"></label>
                   </div>
-                  <hr />
-                  <div class="mb-3">
-                    <div class="cb2">
-                      <h2>Get Notifications From All instructors</h2>
-                      <input type="checkbox" hidden="hidden" id="cb-n4" />
-                      <label class="switch" for="cb-n4"></label>
-                    </div>
-                    <hr />
+                </div>
+                <hr />
+                <div class="mb-3">
+                  <div class="cb2">
+                    <h2>Notification title</h2>
+                    <input type="checkbox" hidden="hidden" id="cb-n2" />
+                    <label class="switch" for="cb-n2"></label>
                   </div>
-                  <div class="mb-3">
-                    <div class="cb2">
-                      <h2>Get Notifications From All TA's</h2>
-                      <input type="checkbox" hidden="hidden" id="cb-n5" />
-                      <label class="switch" for="cb-n5"></label>
-                    </div>
-                  </div>
-                  <hr />
-                  <div class="mb-3">
-                    <div class="cb2">
-                      <h2>Notification title</h2>
-                      <input type="checkbox" hidden="hidden" id="cb-n2" />
-                      <label class="switch" for="cb-n2"></label>
-                    </div>
-                    <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                      Atque fuga eligendi quos recusandae dicta! Repudiandae,
-                      quasi voluptatibus numquam, eveniet autem tempore facilis
-                      accusantium quisquam sequi hic fugit? Voluptates, aliquam
-                      tempore?
-                    </p>
-                  </div>
-                  <button class="btn btn-primary" type="submit">
-                    Save changes
-                  </button>
-                  <button class="btn clear_btn" type="button">Reset</button>
-                </form>
-              </div>
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Atque fuga eligendi quos recusandae dicta! Repudiandae,
+                    quasi voluptatibus numquam, eveniet autem tempore facilis
+                    accusantium quisquam sequi hic fugit? Voluptates, aliquam
+                    tempore?
+                  </p>
+                </div>
+                <button class="btn btn-primary" type="submit">
+                  Save changes
+                </button>
+                <button class="btn clear_btn" type="button">Reset</button>
+              </form>
             </div>
           </div>
         </div>
       </div>
-    </main>
-  </body>
+    </div>
+  </main>
+</body>
+
 </html>
